--- a/src/templates/partials/footer.partial.mustache
+++ b/src/templates/partials/footer.partial.mustache
@@ -13,12 +13,13 @@
                             <li class="list-group-item"><a href="https://github.com/chrisowen491/tranmere-web" class="link">Sourcecode</a></li>
                             <li class="list-group-item"><a href="/contact.html" class="link">Contact Us</a></li>
                             <li class="list-group-item"><a href="https://portal.tranmere-web.com/" class="link">API</a></li>
+                            <li class="list-group-item"><button id="loginout" type="button" class="btn btn-link">Sign-In</button></li>
+
                             <li class="list-group-item"><p class="mb-4">© Tranmere-Web 2020</p></li>
                         </ul>
                     </div>
                     <div class="col">
                         <ul class="list-group list-group-minimal">
-
                             <li class="list-group-item"><div class='onesignal-customlink-container'></div></li>
                         </ul>
                     </div>
@@ -29,7 +30,7 @@
         </div>
     </div>
 </footer>
-        <!-- / footer -->
+<!-- / footer -->
 
 <script src="/assets/js/vendor.min.js?r={{random}}"></script>
 <script src="/assets/js/app.js?r={{random}}"></script>
